feat(quest): add quest apis, introduce some constants
